$Id: History,v 1.27 2000-06-09 12:17:23 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

26 May 2000 Guy Barrand  (interfaces-V01-01-02)
- G4UIXm.hh, G4UIWin32.hh : change comments about /gui for the doc.

23 May 2000 John Allison (interfaces-V01-01-01-without-tcsh)
- Tag without G4UIterminal(G4UItcsh) in case it is not needed in the release.

20 May 2000 Guy Barrand  (interfaces-V01-01-01)
- common/G4InteractorMessenger : change command name "interactor" to "gui".

19 May 2000 John Allison  (interfaces-V01-01-00)
- G4UIterminal displays a candidate list in case a given parameter is
  wrong (Makoto Asai).

26 Mar 2000 Makoto Asai
- Introducing a new G4UIterminal with UNIX-like shell.

10 Nov 1999 Hajime Yoshida  (interfaces-V00-01-03)
- Added less<G4String> argument (Guy).
- G4UIWin32.hh, G4UIXm.hh : usage of G4std::less in G4std::map.
- G4VInteractorManager.cc : G4std::find, G4std::remove.

08 Nov 1999 Hajime Yoshida
- tag interfaces--V00-01-02 for STT

08 Nov 1999 Hajime Yoshida
- GAG/src/G4UIGAG.cc RWT => STL vector
- basic/include/G4UIterminal.hh, GAG/include/G4UIGAG.hh => documentation

02 Nov 1999 Guy Barrand