@@ -1,4 +1,4 @@
-$Id: History,v 1.27 2000-06-09 12:17:23 johna Exp $
+$Id: History,v 1.28 2000-06-14 03:18:58 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+14 June 2000 Makoto Asai (interfaces-V01-01-03)
+- ISO compliance for G4UItcsh classes
+
+- Is
 26 May 2000 Guy Barrand  (interfaces-V01-01-02)
 - G4UIXm.hh, G4UIWin32.hh : change comments about /gui for the doc.
 
